updated packageplan page

--- a/views/packagesPlan.ejs
+++ b/views/packagesPlan.ejs
@@ -19,40 +19,6 @@
     <div class="price__grid">
       <div class="price__card">
         <div class="price__card__content">
-          <h4>Basic Plan</h4>
-          <h3>₹1500</h3>
-          <p>
-            <i class="ri-checkbox-circle-line"></i>
-            Smart workout plan
-          </p>
-          <p>
-            <i class="ri-checkbox-circle-line"></i>
-            At home workouts
-          </p>
-        </div>
-        <button class="btn price__btn">Join Now</button>
-      </div>
-      <div class="price__card">
-        <div class="price__card__content">
-          <h4>Weekly Plan</h4>
-          <h3>₹2500</h3>
-          <p>
-            <i class="ri-checkbox-circle-line"></i>
-            PRO Gyms
-          </p>
-          <p>
-            <i class="ri-checkbox-circle-line"></i>
-            Smart workout plan
-          </p>
-          <p>
-            <i class="ri-checkbox-circle-line"></i>
-            At home workouts
-          </p>
-        </div>
-        <button class="btn price__btn">Join Now</button>
-      </div>
-      <div class="price__card">
-        <div class="price__card__content">
           <h4>Monthly Plan</h4>
           <h3>₹4000</h3>
           <p>
@@ -72,8 +38,43 @@
             At home workouts
           </p>
         </div>
-        <button class="btn price__btn">Join Now</button>
+        <a href="/api/v1/packages-plan/overview/monthlyPlan" class="btn price__btn" >View Details</a>
       </div>
+      <div class="price__card">
+        <div class="price__card__content">
+          <h4>Quaterly Plan</h4>
+          <h3>₹1500</h3>
+          <p>
+            <i class="ri-checkbox-circle-line"></i>
+            Smart workout plan
+          </p>
+          <p>
+            <i class="ri-checkbox-circle-line"></i>
+            At home workouts
+          </p>
+        </div>
+        <a href="/api/v1/packages-plan/overview/quaterlyPlan" class="btn price__btn" >View Details</a>
+      </div>
+      <div class="price__card">
+        <div class="price__card__content">
+          <h4>Six Months Plan</h4>
+          <h3>₹2500</h3>
+          <p>
+            <i class="ri-checkbox-circle-line"></i>
+            PRO Gyms
+          </p>
+          <p>
+            <i class="ri-checkbox-circle-line"></i>
+            Smart workout plan
+          </p>
+          <p>
+            <i class="ri-checkbox-circle-line"></i>
+            At home workouts
+          </p>
+        </div>
+        <a href="/api/v1/packages-plan/overview/halfYearPlan" class="btn price__btn" value="monthlyPlan">View Details</a>
+      </div>
+
       <div class="price__card">
         <div class="price__card__content">
           <h4>Yearly Plan</h4>
@@ -99,7 +100,7 @@
             Personal Training
           </p>
         </div>
-        <button class="btn price__btn">Join Now</button>
+        <a href="/api/v1/packages-plan/overview/yearlyPlan" class="btn price__btn" value="yearlyPlan">View Details</a>
       </div>
       <div class="price__card">
         <div class="price__card__content">
@@ -130,7 +131,7 @@
             Health podcasts and Yoga
           </p>
         </div>
-        <button class="btn price__btn">Join Now</button>
+        <a href="/api/v1/packages-plan/overview/premiumPlan" class="btn price__btn" value="premiumPlan">View Details</a>
       </div>
     </div>
   </section>
