--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,9 +18,8 @@
       <li class="link"><a href="#">Home</a></li>
       <li class="link"><a href="/api/v1/programs">Program</a></li>
       <li class="link"><a href="/api/v1/packages-plan">Packages Plan</a></li>
-      <li class="link"><a href="trainers.html">Trainers </a></li>
-      <li class="link"><a href="membership validity.html">Membership Validity </a></li>
-      <li class="link"><a href="#">About</a></li>
+      <li class="link"><a href="/api/v1/exercises">Exercises</a></li>
+      <li class="link"><a href="/api/v1/about">About</a></li>
     </ul>
     <%if(!token){%>
       <a href="/api/v1/auth/login" class="loginbtn">login</a>
