--- a/views/packageOverview.ejs
+++ b/views/packageOverview.ejs
@@ -6,148 +6,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Package Overview</title>
     <link rel="stylesheet" href="https://cdn.tailwindcss.com">
+    <style>
+        .container {
+            max-width: 1280px;
+            margin: 0 auto;
+            padding: 10px 15px;
+        }
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="bg-white">
-        <div class="pt-6">
-            <!-- <nav aria-label="Breadcrumb">
-                <ol role="list" class="mx-auto flex max-w-2xl items-center space-x-2 px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-                    <li>
-                        <div class="flex items-center">
-                            <a href="#" class="mr-2 text-sm font-medium text-gray-900">Men</a>
-                            <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" aria-hidden="true"
-                                class="h-5 w-4 text-gray-300">
-                                <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
-                            </svg>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="flex items-center">
-                            <a href="#" class="mr-2 text-sm font-medium text-gray-900">Clothing</a>
-                            <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor" aria-hidden="true"
-                                class="h-5 w-4 text-gray-300">
-                                <path d="M5.697 4.34L8.98 16.532h1.327L7.025 4.341H5.697z" />
-                            </svg>
-                        </div>
-                    </li>
+    <div class="pt-6 container">
 
-                    <li class="text-sm">
-                        <a href="#" aria-current="page" class="font-medium text-gray-500 hover:text-gray-600">Basic Tee
-                            6-Pack</a>
-                    </li>
-                </ol>
-            </nav> -->
-
-            <!-- Image gallery -->
-            <div class="mx-auto mt-6 max-w-2xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:gap-x-8 lg:px-8">
-                <div class="aspect-h-5 aspect-w-4 lg:aspect-h-4 lg:aspect-w-3 sm:overflow-hidden sm:rounded-lg">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-02-featured-product-shot.jpg"
-                        alt="Model wearing plain white basic tee." class="h-full w-full object-cover object-center">
-                </div>
+        <!-- Image gallery -->
+        <div class="flex mx-auto justify-center w-full py-8">
+            <div class=" sm:rounded-lg w-2/5 flex justify-center">
+                <img src='<%= data.image %>'
+                    alt="Model wearing plain white basic tee." width="350px" class="object-cover object-center ">
             </div>
 
-            <!-- Product info -->
-            <div
-                class="mx-auto max-w-2xl px-4 pb-16 pt-10 sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8 lg:px-8 lg:pb-24 lg:pt-16">
-                <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
-                    <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl"><%= data.title %></h1>
-                </div>
+            <div class="mt-4 lg:row-span-3 lg:mt-0 w-1/2 flex flex-col justify-center">
+                <h2 class="">Package Information</h2>
+                <p class="text-3xl tracking-tight">₹<%= data.price %>
+                </p>
 
-                <!-- Options -->
-                <div class="mt-4 lg:row-span-3 lg:mt-0">
-                    <h2 class="sr-only">Product information</h2>
-                    <p class="text-3xl tracking-tight text-gray-900"><%= data.price %></p>
-
-                    <!-- Reviews -->
-                    <div class="mt-6">
-                        <h3 class="sr-only">Reviews</h3>
+                <!-- Reviews -->
+                <div class="mt-6">
+                    <h3 class="sr-only">Reviews</h3>
+                    <div class="flex items-center">
                         <div class="flex items-center">
-                            <div class="flex items-center">
-                                <!-- Active: "text-gray-900", Default: "text-gray-200" -->
-                                <svg class="text-gray-900 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <svg class="text-gray-900 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <svg class="text-gray-900 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <svg class="text-gray-900 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                                <svg class="text-gray-200 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                            </div>
-                            <p class="sr-only">4 out of 5 stars</p>
-                            <a href="#" class="ml-3 text-sm font-medium text-indigo-600 hover:text-indigo-500">117
-                                reviews</a>
+                            <!-- Active: "text-gray-900", Default: "text-gray-200" -->
+                            <svg class="text-blue-600 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <svg class="text-blue-600 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <svg class="text-blue-600 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <svg class="text-blue-600 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <svg class="text-gray-200 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z"
+                                    clip-rule="evenodd" />
+                            </svg>
                         </div>
+                        <p class="sr-only">4 out of 5 stars</p>
+                        <a href="#" class="ml-3 text-sm font-medium text-yellow-500 hover:text-indigo-500">117
+                            reviews</a>
                     </div>
-                    <form action="" class="mt-10">
-                        <button type="submit"
-                            class="mt-10 flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Join Now</button>
-                    </form>
                 </div>
+                <div>
 
-                <div class="py-10 lg:col-span-2 lg:col-start-1 lg:border-r lg:border-gray-200 lg:pb-16 lg:pr-8 lg:pt-6">
-                    <!-- Description and details -->
+
+                    <div class="lg:col-span-2 lg:pr-8">
+                        <h1 class="text-2xl font-bold tracking-tight sm:text-3xl">
+                            <%= data.title %>
+                        </h1>
+                    </div>
                     <div>
                         <h3 class="sr-only">Description</h3>
 
                         <div class="space-y-6">
-                            <p class="text-base text-gray-900">The Basic Tee 6-Pack allows you to fully express your
-                                vibrant personality with three grayscale options. Feeling adventurous? Put on a heather
-                                gray tee. Want to be a trendsetter? Try our exclusive colorway: &quot;Black&quot;. Need
-                                to add an extra pop of color to your outfit? Our white tee has you covered.</p>
+                            <p class="text-base">
+                                <%= data.description %>
+                            </p>
                         </div>
-                    </div>
-
-                    <div class="mt-10">
-                        <h3 class="text-sm font-medium text-gray-900">Highlights</h3>
-
-                        <div class="mt-4">
-                            <ul role="list" class="list-disc space-y-2 pl-4 text-sm">
-                                <li class="text-gray-400"><span class="text-gray-600">Hand cut and sewn locally</span>
-                                </li>
-                                <li class="text-gray-400"><span class="text-gray-600">Dyed with our proprietary
-                                        colors</span></li>
-                                <li class="text-gray-400"><span class="text-gray-600">Pre-washed &amp; pre-shrunk</span>
-                                </li>
-                                <li class="text-gray-400"><span class="text-gray-600">Ultra-soft 100% cotton</span></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="mt-10">
-                        <h2 class="text-sm font-medium text-gray-900">Details</h2>
-
-                        <div class="mt-4 space-y-6">
-                            <p class="text-sm text-gray-600">The 6-Pack includes two black, two white, and two heather
-                                gray Basic Tees. Sign up for our subscription service and be the first to get new,
-                                exciting colors, like our upcoming &quot;Charcoal Gray&quot; limited release.</p>
-                        </div>
+                        <a type="submit" href="/api/v1/packages-plan/<%= params.id %>/join"
+                            class="mt-10 flex items-center justify-center rounded-md border border-transparent px-8 py-3 font-medium text-white bg-[#f9ac54] focus:outline-none focus:ring-2 focus:ring-indigo-500  focus:ring-offset-2 w-2/5">Join
+                            Now</a>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- Options -->
+        <div
+            class="py-10 lg:col-span-2 lg:col-start-1 lg:pb-16 lg:pr-8 lg:pt-6 flex  px-8">
+            <!-- Description and details -->
+
+
+            <div class="w-2/5 ml-14">
+                <h3 class="text-sm font-medium">Highlights</h3>
+
+                <div class="mt-4">
+                    <ul role="list" class="list-disc space-y-2 pl-4 text-sm">
+                        <% data.highlights.forEach((e,i)=>{ %>
+                            <li class=""><%= e %></li>
+                        <% }) %>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="w-2/5">
+                <h2 class="text-sm font-medium">Details</h2>
+
+                <div class="mt-4 space-y-6">
+                    <p class="text-sm"><%= data.details %></p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
