--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -41,26 +41,26 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
                                     src="https://preview.cruip.com/mosaic/images/user-64-13.jpg" width="64" height="64"
                                     alt="User" />
                             </div>
-                            <h1 class="text-xl leading-snug text-gray-800 font-semibold mb-2">Front-End Learning 🔥</h1>
+                            <h1 class="text-xl leading-snug text-gray-800 font-semibold mb-2">Welcome 🔥</h1>
                             <div class="text-sm">
-                                Learn how to create real web apps using HTML & CSS. Code templates included.
+                                Make payment securely using this page
                             </div>
                         </div>
 
                         <!-- Toggle -->
                         <div class="flex justify-center mb-6">
                             <div class="relative flex w-full p-1 bg-gray-50 rounded">
-                                <span class="absolute inset-0 m-1 pointer-events-none" aria-hidden="true">
+                                <!-- <span class="absolute inset-0 m-1 pointer-events-none" aria-hidden="true">
                                     <span
                                         class="absolute inset-0 w-1/2 bg-white rounded border border-gray-200 shadow-sm transform transition duration-150 ease-in-out"
                                         :class="card ? 'translate-x-0' : 'translate-x-full'"></span>
-                                </span>
+                                </span> -->
                                 <button id="cardBtn"
                                     class="relative flex-1 text-sm font-medium p-1 transition duration-150 ease-in-out focus:outline-none focus-visible:ring-2"
                                     @click.prevent="card = true">Pay With Card</button>
-                                <button id="paypalBtn"
+                                <!-- <button id="paypalBtn"
                                     class="relative flex-1 text-sm font-medium p-1 transition duration-150 ease-in-out focus:outline-none focus-visible:ring-2"
-                                    @click.prevent="card = false">Pay With PayPal</button>
+                                    @click.prevent="card = false">Pay With PayPal</button> -->
                             </div>
                         </div>
 
@@ -116,9 +116,7 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
                                         class="font-medium text-sm inline-flex items-center justify-center px-3 py-2 border border-transparent rounded leading-5 shadow-sm transition duration-150 ease-in-out w-full bg-indigo-500 hover:bg-indigo-600 text-white focus:outline-none focus-visible:ring-2">Pay
                                         253.00rs</button>
                                 </div>
-                                <div class="text-xs text-gray-500 italic text-center">You'll be charged $253, including
-                                    $48
-                                    for VAT in Italy</div>
+                                <div class="text-xs text-gray-500 italic text-center">You'll be charged 253rs</div>
                             </div>
                         </div>
 
@@ -143,7 +141,7 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
     </section>
 
     <!-- More components -->
-    <div x-show="open" class="fixed bottom-0 right-0 w-full md:bottom-8 md:right-12 md:w-auto z-60"
+    <!-- <div x-show="open" class="fixed bottom-0 right-0 w-full md:bottom-8 md:right-12 md:w-auto z-60"
         x-data="{ open: true }">
         <div class="bg-gray-800 text-gray-50 text-sm p-3 md:rounded shadow-lg flex justify-between">
             <div>👉 <a class="hover:underline ml-1" href="https://cruip.com/mosaic/?ref=codepen-cruip-customers-table"
@@ -156,13 +154,13 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
                 </svg>
             </button>
         </div>
-    </div>
+    </div> -->
 </body>
 <script>
-    let cardBtn = document.getElementById('cardBtn');
-    let cardDiv = document.getElementById('cardDiv');
-    let paypalBtn = document.getElementById('paypalBtn');
-    let paypalDiv = document.getElementById('paypalDiv');
+    // let cardBtn = document.getElementById('cardBtn');
+    // let cardDiv = document.getElementById('cardDiv');
+    // let paypalBtn = document.getElementById('paypalBtn');
+    // let paypalDiv = document.getElementById('paypalDiv');
     // paypalBtn.addEventListener()
 </script>
 
